--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
           <div class="span12 navbar">
 
             <h1 class="logo pull-left"><a href="/">flokk</a></h1>
+
             <ul class="nav pull-right ng-cloak account-links">
               <li data-ng-class="{active: nav=='account'}">
                 <a href="/account">Account</a>
@@ -37,6 +38,10 @@
                 <a href="/cart">Cart ({{cart.items.length}})</a>
               </li>
             </ul>
+            
+            <form class="navbar-search pull-right">
+              <input type="text" class="search-query" placeholder="Search">
+            </form>
 
           </div>
 
@@ -47,6 +52,10 @@
         <div class="row">
           <div class="span2">
             <div class="sidebar-nav" data-ng-controller="SidenavController">
+              <ul class="nav nav-list">
+                <li class="nav-header"><a href="/">Sales</a></li>
+                <li class="divider"></li>
+              </ul>
               <ul data-ng-repeat="category in categories" class="nav nav-list">
                 <li class="nav-header"><a data-ng-bind="category.title" data-ng-click="changeCategory(category.rel)"></a></li>
                 <li class="nav-subcategory" data-ng-show="category.show" data-ng-repeat="subcategory in category.subcategories"><a data-ng-bind="subcategory.title" data-ng-href="/products/{{category.rel}}/{{subcategory.rel}}"></a></li>
