--- a/public/index.html
+++ b/public/index.html
@@ -6,62 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Flokk">
     <meta name="description" content="">
-
-    <!-- Le styles -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
-    <link href="/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="/css/sticky.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
-
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css">
+    <link href="/public/build.css" rel="stylesheet">
   </head>
-
-  <body data-ng-controller="RootController" data-ng-class="page">
-
-    <div id="wrap">
-
-      <div class="container">
-        <div class="row">
-
-          <div class="span12 navbar">
-
-            <h1 class="logo pull-left"><a href="/">flokk</a></h1>
-
-            <ul class="nav pull-right ng-cloak account-links">
-              <li data-ng-class="{active: nav=='account'}">
-                <a href="/account" data-bind-i18n="'account_link'"></a>
-              </li>
-              <li data-ng-class="{active: nav=='cart'}" data-ng-controller="CartController">
-                <a href="/cart" data-bind-i18n="{'key':'cart', 'smart_count': cart._embedded.items}"></a>
-              </li>
-            </ul>
-            
-            <form class="navbar-search pull-right">
-              <input type="text" class="search-query" placeholder="Search">
-            </form>
-
-          </div>
-
-        </div>
-      </div>
+  <body>
+    <div id="wrap" data-ng-controller="IndexController">
+      <div class="navbar navbar-fixed-top" data-ng-include="" src="'/partials/nav.nghtml'"></div>
 
       <div class="container" id="main">
         <div class="row">
-          <div class="span2">
-            <div class="sidebar-nav" data-ng-controller="SidenavController">
-              <ul class="nav nav-list">
-                <li class="nav-header"><a href="/" data-bind-i18n="'category.sales'"></a></li>
-                <li class="divider"></li>
-              </ul>
-              <ul data-ng-repeat="category in categories._embedded.categories" class="nav nav-list">
-                <li class="nav-header"><a data-bind-i18n="{key: 'category.'+category.rel, _:category.title}" data-ng-href="/products/{{category.rel}}"></a></li>
-                <li class="nav-subcategory" data-ng-show="category.show" data-ng-repeat="subcategory in category._embedded.subcategories"><a data-bind-i18n="{key: 'category.'+subcategory.rel, _:subcategory.title}" data-ng-href="/products/{{category.rel}}/{{subcategory.rel}}"></a></li>
-              </ul>
-            </div>
-          </div>
+          <div class="span2" data-ng-include="" src="'/partials/sidenav.nghtml'"></div>
           <div class="span10" data-ng-view=""></div>
         </div>
       </div>
@@ -70,16 +24,10 @@
 
     <footer>
       <div class="container">
-        <p class="pull-right">© Flokk 2013</p>
+        <p class="pull-right"></p>
       </div>
     </footer>
 
-    <script src="/js/angular.js"></script>
-    <script type="text/javascript" src="/js/app.js"></script>
-    <script type="text/javascript" src="/js/controllers.js"></script>
-    <script type="text/javascript" src="/js/directives.js"></script>
-    <script type="text/javascript" src="/js/filters.js"></script>
-    <script type="text/javascript" src="/js/services.js"></script>
-    <script src="https://raw.github.com/airbnb/polyglot.js/master/build/polyglot.js"></script>
+    <script type="text/javascript" src="/public/build.js"></script>
   </body>
 </html>
