Use better api for translation

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,9 @@
 
     <footer>
       <div class="container">
-        <p class="pull-right"></p>
+        <div class="span5">
+          <p></p>
+        </div>
       </div>
     </footer>
 
