--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-ng-app="flokk">
   <head>
     <meta charset="utf-8">
-    <title data-ng-bind="'flokk | '+title">flokk</title>
+    <title>flokk</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Flokk">
     <meta name="description" content="">
