--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
     <link rel="icon" type="text/css" href="/favicon.ico">
     <link href="/public/build.css" rel="stylesheet">
   </head>
-  <body>
+  <body data-ng-controller="IndexController">
     <div class="navbar navbar-fixed-top" data-ng-include="" src="'/partials/nav.nghtml'"></div>
 
-    <div id="wrap" data-ng-controller="IndexController">
+    <div id="wrap">
       <div class="container" id="main">
         <div class="row">
           <div class="span2" data-ng-include="" src="'/partials/sidenav.nghtml'"></div>
