Fix the mobile media query

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en" data-ng-app="flokk">
   <head>
     <meta charset="utf-8">
-    <title>flokk</title>
+    <title>FLOKK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <meta name="author" content="Flokk">
+    <meta name="author" content="The Flokk, LLC">
     <meta name="description" content="">
     <link rel="icon" type="text/css" href="/favicon.ico">
     <link href="/public/build.css" rel="stylesheet">
