--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,6 @@
     </div>
 
     <footer data-ng-include="" src="'/partials/footer.nghtml'"></footer>
-
-    <script type="text/javascript" src="/public/build.js"></script>
+    <script src="/public/build.js"></script>
   </body>
 </html>
