--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
     <footer data-ng-include="" src="'/partials/footer.nghtml'"></footer>
     <script src="/public/build.js"></script>
-    <script src="http://js.pusher.com/2.1/pusher.min.js" type="text/javascript"></script>
+    <script src="https://d3dy5gmtp8yhk7.cloudfront.net/2.1/pusher.min.js" type="text/javascript"></script>
     <script>
       if (window.metric) metric({'measure': 'page_load_time', val: (Date.now() - startTime), units: 'ms'});
     </script>
